fixed font-size on firefox mac

--- a/app/assets/stylesheets/modules/static-pages.sass
+++ b/app/assets/stylesheets/modules/static-pages.sass
@@ -11,7 +11,7 @@
     padding-top: 15px
     text-align: justify
     margin-bottom: 10px
-    font-size: 18px
+    font-size: 1.25em
     font-family: FuturaLT
 
   li
